--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   url_launcher: ^6.1.11
   animated_text_kit: ^4.2.2
+  qr_flutter: ^4.0.0
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
