--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   qr_flutter: ^4.0.0
   flutter_animate: ^4.2.0+1
+  flutter_animated_dialog: ^2.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
