--- a/.github/workflows/.build-deploy.yml
+++ b/.github/workflows/.build-deploy.yml
@@ -15,12 +15,14 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     
     - name: Install Flutter
-      uses: subosito/flutter-action@v1
+      uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.3.2'
+        channel : stable
+        flutter-version-file: /portfolio/pubspec.yaml # path to pubspec.yaml
+    - run: flutter --version
     
     - name: Get dependencies
       run: flutter pub get
@@ -48,7 +50,7 @@ jobs:
         path: ./build
 
     - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
