--- a/.github/workflows/.build-deploy.yml
+++ b/.github/workflows/.build-deploy.yml
@@ -21,7 +21,7 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         channel : stable
-        flutter-version-file: ../pubspec.yaml # path to pubspec.yaml
+        flutter-version-file: pubspec.yaml # path to pubspec.yaml
     - run: flutter --version
     
     - name: Get dependencies
